--- a/LiquibaseC/pom.xml
+++ b/LiquibaseC/pom.xml
@@ -21,5 +21,48 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
+<dependency>
+    <groupId>org.liquibase</groupId>
+    <artifactId>liquibase-core</artifactId>
+    <version>3.8.4</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>42.2.9</version>
+</dependency>
   </dependencies>
+  
+  <build>
+<plugins>
+<plugin>
+<!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-maven-plugin -->
+
+    <groupId>org.liquibase</groupId>
+    <artifactId>liquibase-maven-plugin</artifactId>
+    <version>3.8.4</version>
+
+<configuration>
+  <changeLogFile>/c:/Users/Uncleared/git/Postgresqldb/LiquibaseC/add_new_column.xml</changeLogFile>
+  <url>jdbc:postgresql://127.0.0.1:5432/northwind</url>
+  <username>postgres</username>
+  <password>postgres</password>
+  <classpath>/c:/Users/Uncleared/Desktop/Liquibase/liquibase-3.8.4/postgresql-42.2.9.jar</classpath>
+</configuration>
+
+<executions>
+<execution>
+<goals>
+<goal>update</goal>
+</goals>
+</execution>
+</executions>
+</plugin>
+</plugins>
+</build>
+  
 </project>
