Committed changes to new Liquibase directory

--- a/LiquibaseC/liquibase.properties
+++ b/LiquibaseC/liquibase.properties
@@ -1,6 +1,6 @@
-changeLogFile: /c:/Users/Uncleared/git/Postgresqldb/LiquibaseC/insert_categories_city2.xml
-url: jdbc:postgresql://127.0.0.1:5432/northwind
+changeLogFile: /c:/Users/pc/git/Postgresqldb/LiquibaseC/insert_categories_city2.xml
+url: jdbc:postgresql://10.0.0.200:5433/northwind
 driver: org.postgresql.Driver
 username: postgres
 password: postgres
-classpath=/c:/Users/Uncleared/Desktop/Liquibase/liquibase-3.8.4/postgresql-42.2.9.jar
+classpath=/c:/Program Files/liquibase/postgresql-42.2.9.jar
