--- a/LiquibaseC/liquibase.properties
+++ b/LiquibaseC/liquibase.properties
@@ -1,4 +1,4 @@
-changeLogFile: /c:/Users/pc/git/Postgresqldb/LiquibaseC/insert_categories_city2.xml
+changeLogFile: /c:/Users/pc/git/Postgresqldb/LiquibaseC/add-new-column.sql
 url: jdbc:postgresql://10.0.0.200:5433/northwind
 driver: org.postgresql.Driver
 username: postgres
