--- a/LiquibaseC/liquibase.properties
+++ b/LiquibaseC/liquibase.properties
@@ -1,6 +1,6 @@
-changeLogFile: /c:/Users/pc/git/Postgresqldb/LiquibaseC/add-new-column.sql
+changeLogFile: //c:/Users/pc/git/Postgresqldb/LiquibaseC/add-new-column.sql
 url: jdbc:postgresql://10.0.0.200:5433/northwind
 driver: org.postgresql.Driver
 username: postgres
 password: postgres
-classpath=/c:/Program Files/liquibase/postgresql-42.2.9.jar
+classpath: //c:/Program Files/liquibase/postgresql-42.2.8.jar
